test and adjust exhibitions

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,6 +8,7 @@
 @import "style/footer"
 @import "style/home"
 @import "style/events"
+@import "style/exhibitions"
 @import "style/posts"
 @import "style/projects"
 @import "style/pages"
