--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -1,13 +1,17 @@
 // Events
 .events__page
     .event-sidebar
+        > div
+            display: flex
+            flex-direction: column
         .toc-container
             border-top: none !important
             padding-top: 0 !important
         .events-actions > span
             @include meta
             color: $color-text-alt
-
+        aside
+            order: 2
     .hero
         .container 
             .content
@@ -121,6 +125,16 @@
                 
 
 .events__section
+    &.full-width
+        @include media-breakpoint-up(desktop)
+            .events--list
+                .event
+                    &-content
+                        > .event-title, > hgroup, .event-description, .event-categories, .event-status
+                            grid-column: 4 / 10
+                        > .event-schedule
+                            grid-column: 1 / 4
+                            grid-row: 1 / 4
     .event--with-image
         .media
             img
