--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -22,6 +22,8 @@
                 figure
                     margin-top: $spacing-3
         @include media-breakpoint-up(desktop)
+            figure
+                order: 2
             &--image-portrait,
             &--image-square
                 .container
