--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -142,3 +142,14 @@
             img
                 aspect-ratio: 1
                 object-fit: cover
+
+    .events-calendar
+        .calendar-month
+            caption a
+                @include link($color-text)
+                font-weight: normal
+            tbody
+                td
+                    a,
+                    a:hover
+                        color: $color-text
