dropdown hover color

--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -127,6 +127,7 @@
                 
 
 .events__section
+    --dropdown-hover-color: var(--color-text)
     &.full-width
         @include media-breakpoint-up(desktop)
             .events--list
