theme and style

--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -1,5 +1,8 @@
 // Events
 .events__page
+    .event-access
+        .event-slots
+            border-top: 0 !important
     .event-sidebar
         > div
             display: flex
