--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -153,6 +153,7 @@
                 font-weight: normal
             tbody
                 td
-                    a,
-                    a:hover
+                    a
                         color: $color-text
+                    a:hover
+                        color: var(--color-background)
