events: remove hours in hero

--- a/layouts/partials/events/single/hero.html
+++ b/layouts/partials/events/single/hero.html
@@ -43,7 +43,7 @@
         {{ if (or .Params.dates.computed.two_lines.short .Params.dates.from.hour .Params.dates.to.hour) }}
           <div class="event-schedule" itemprop="startDate" content="{{- if .Params.dates.from.day -}}{{ .Params.dates.from.day }}{{- end -}} {{- if .Params.dates.from.hour -}}{{ .Params.dates.from.hour }}{{- end -}}">
             <p class="event-dates">{{ partial "PrepareHTML" .Params.dates.computed.two_lines.short }}</p>
-            {{- if (or .Params.dates.from.hour .Params.dates.to.hour)}}
+            {{/*  {{- if (or .Params.dates.from.hour .Params.dates.to.hour)}}
               <div class="event-time">
                 {{- if .Params.dates.from.hour }}
                   <span>{{ .Params.dates.from.hour }}</span>
@@ -52,7 +52,7 @@
                   <span> {{ .Params.dates.to.hour }}</span>
                 {{ end -}}
               </div>
-            {{ end -}}
+            {{ end -}}  */}}
           </div>
         {{ end }}
 
