remove title with line

--- a/assets/sass/style/blocks.sass
+++ b/assets/sass/style/blocks.sass
@@ -16,15 +16,15 @@
     margin-bottom: $spacing-6
     @include media-breakpoint-down(desktop)
         margin-bottom: $spacing-5
-    @include media-breakpoint-up(desktop)
-        &:not(.block-call_to_action)
-            .block-title
-                @include large-line
-                @include h4
-                font-weight: bold
-                text-transform: none
-                a::after
-                    display: none
+    // @include media-breakpoint-up(desktop)
+    //     &:not(.block-call_to_action)
+    //         .block-title
+    //             @include large-line
+    //             @include h4
+    //             font-weight: bold
+    //             text-transform: none
+    //             a::after
+    //                 display: none
 
 .block-siblings-navigation
     .siblings-navigation ul 
