--- a/assets/sass/style/blocks.sass
+++ b/assets/sass/style/blocks.sass
@@ -119,14 +119,14 @@
                         .event-dates
                             @include h1
                         .event-description
-                            display: flex
-                            justify-content: space-between
-                            > [itemprop="description"]
-                                width: columns(4)
+                            // display: flex
+                            // justify-content: space-between
+                            width: columns(4)
                         .event-schedule
                             margin-bottom: 0
                         .more
-                            margin: 0
+                            // margin: 0
+                            text-align: left
         @include media-breakpoint-up(desktop)
             .event
                 position: relative
