--- a/assets/sass/style/projects.sass
+++ b/assets/sass/style/projects.sass
@@ -1,5 +1,5 @@
 .projects__section,
-.block-projects
+.block-projects--grid
     .project-content
         align-items: baseline
     .project-categories
@@ -22,7 +22,13 @@
             transform: translate(-25%, -10%)
             @include media-breakpoint-up(desktop)
                 transform: translate(-25%, -20%)
-
+.project
+    .project-title
+        a:hover
+            color: var(--color-text)
+    .project-categories
+        a
+            @include link($color-text)
 .projects__page
     .hero
         .hero-text
