better columns for parents in event

--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -166,7 +166,9 @@
                 .event-title
                     margin-top: $spacing-3
         @include media-breakpoint-up(desktop)
-            padding-left: offset(4)
+            .event-parent__title
+            .event,
+                padding-left: offset(4)
             .event-schedule,
             .more
                 text-align: right
