--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -204,11 +204,12 @@
             .events--list
                 .event
                     &-content
-                        > .event-title, > hgroup, .event-description, .event-categories, .event-status
+                        > .event-title, > hgroup, .event-description, .event-categories, .event-status, .event-parent
                             grid-column: 4 / 10
                         > .event-schedule
                             grid-column: 1 / 4
                             grid-row: 1 / 4
+
     .event--with-image
         .media
             img
