--- a/assets/sass/style/blocks.sass
+++ b/assets/sass/style/blocks.sass
@@ -308,6 +308,7 @@
                 > hgroup,
                 .event-title,
                 .event-description,
+                .event-parent,
                 .event-categories
                     grid-column: 4 / 11
 
