--- a/assets/sass/style/layout.sass
+++ b/assets/sass/style/layout.sass
@@ -95,3 +95,6 @@ html.has-menu-opened body::after
                         padding-left: 0
                         padding-bottom: 0
                         padding-right: calc(#{$spacing-2} + #{space(1)})
+
+a
+    --color-accent: var(--color-text)
