--- a/assets/sass/style/blocks.sass
+++ b/assets/sass/style/blocks.sass
@@ -145,7 +145,7 @@
                         text-align: right
                         margin-bottom: $spacing-3
                 &-categories 
-                    background-color: $color-accent
+                    background-color: var(--color-site)
                     display: flex
                     height: 100%
                     margin: 0
@@ -184,7 +184,7 @@
                     flex-direction: column
                     gap: $spacing-2
                 .event-categories
-                    background-color: $color-accent
+                    background-color: var(--color-site)
                     order: -1
                     padding: $spacing-2 $spacing-1
                     line-height: 1
@@ -216,7 +216,7 @@
 .block-image
     @include in-page-with-or-without-sidebar
         .block-content figure
-            background-color: $color-accent
+            background-color: var(--color-site)
             text-align: right
             picture
                 display: inline-block
