--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -96,7 +96,7 @@
         .grid
             @include grid(1)
         article
-            background: $color-accent
+            background: var(--color-site)
             padding: $spacing-3
             width: 100%
             a::after
@@ -147,7 +147,7 @@
                 aspect-ratio: 1
                 object-fit: cover
             .event-categories
-                background-color: $color-accent
+                background-color: var(--color-site)
                 display: flex
                 height: 100%
                 margin: 0
