--- a/assets/sass/style/exhibitions.sass
+++ b/assets/sass/style/exhibitions.sass
@@ -1,6 +1,6 @@
 .events__section .agenda-exhibitions,
 .events_categories__term .agenda-exhibitions
-    background: var(--color-accent)
+    background: var(--color-site)
     .exhibition
         .media img
             aspect-ratio: 1
