--- a/assets/sass/style/footer.sass
+++ b/assets/sass/style/footer.sass
@@ -69,7 +69,7 @@ footer#document-footer
                 margin-left: 0
                 &:focus-visible
                     outline-offset: 0px
-                    border: 4px solid $color-accent
+                    border: 4px solid var(--color-site)
             .dropdown-menu
                 margin-left: 0
                 right: 0
