--- a/assets/sass/style/posts.sass
+++ b/assets/sass/style/posts.sass
@@ -1,4 +1,4 @@
 .post-infos
     a
         color: $color-text
-        text-decoration-color: var(--color-accent)
+        text-decoration-color: var(--color-site)
