--- a/assets/sass/style/events.sass
+++ b/assets/sass/style/events.sass
@@ -201,6 +201,10 @@
 
 .events__section
     --dropdown-hover-color: var(--color-text)
+    .agenda-filters
+        + .container
+            margin-top: 0
+            
     .event--with-image
         .media
             img
